Fix text overflow

--- a/resources/css/_realisation.scss
+++ b/resources/css/_realisation.scss
@@ -48,6 +48,7 @@
         margin: 0;
         padding: .85em 0;
         color: rgb(85,85,85);
+        word-wrap: break-word;
     }
 
     &-content {
